force-app/main/default/objects/Account_Confidence__mdt/Account_Confidence__mdt.object-meta.xml
<CustomObject>
    <label>Account Confidence</label>
    <pluralLabel>Accounts Confidence</pluralLabel>
</CustomObject>