force-app/main/default/objects/Account_Confidence__mdt/fields/SW_Industry__c.field-meta.xml
<CustomField>
    <fullName>SW_Industry__c</fullName>
    <description>Account.SW_Industry__c</description>
    <label>SW Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>