force-app/main/default/objects/Account_Confidence__mdt/fields/Website_Category_New__c.field-meta.xml
<CustomField>
    <fullName>Website_Category_New__c</fullName>
    <description>Account.Website_Category_New__c</description>
    <label>Website Category New</label>
    <length>255</length>
    <type>Text</type>
</CustomField>